Fixed overflowing sidebar

--- a/Custom Right-Click Menu/app/css/crmAPIDocs.css
+++ b/Custom Right-Click Menu/app/css/crmAPIDocs.css
@@ -216,6 +216,8 @@ a:focus::before {
 
 .sectionNavTxt {
 	color: black;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .indexAnchor {
